WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284671
[Ventura] WebCodecs AudioDecoder tests intermittently fail on Ventura
https://bugs.webkit.org/show_bug.cgi?id=284671
Summary
[Ventura] WebCodecs AudioDecoder tests intermittently fail on Ventura
Jean-Yves Avenard [:jya]
Reported
2024-12-13 16:58:42 PST
This is probably related to
https://bugs.webkit.org/show_bug.cgi?id=284075
But with the update of the WPT that added lots of PCM decoding tests, they intermittently fail on Ventura [ Ventura ] imported/w3c/web-platform-tests/webcodecs/audioDecoder-codec-specific.https.any.html?pcm_alaw [ Pass Failure ] [ Ventura ] imported/w3c/web-platform-tests/webcodecs/audioDecoder-codec-specific.https.any.html?pcm_ulaw [ Pass Failure ] [ Ventura ] imported/w3c/web-platform-tests/webcodecs/audioDecoder-codec-specific.https.any.html?pcm_u8 [ Pass Failure ] [ Ventura ] imported/w3c/web-platform-tests/webcodecs/audioDecoder-codec-specific.https.any.html?pcm_s16 [ Pass Failure ] [ Ventura ] imported/w3c/web-platform-tests/webcodecs/audioDecoder-codec-specific.https.any.html?pcm_s24 [ Pass Failure ] [ Ventura ] imported/w3c/web-platform-tests/webcodecs/audioDecoder-codec-specific.https.any.html?pcm_s32 [ Pass Failure ] [ Ventura ] imported/w3c/web-platform-tests/webcodecs/audioDecoder-codec-specific.https.any.html?pcm_f32 [ Pass Failure ] [ Ventura ] imported/w3c/web-platform-tests/webcodecs/audioDecoder-codec-specific.https.any.worker.html?pcm_alaw [ Pass Failure ] [ Ventura ] imported/w3c/web-platform-tests/webcodecs/audioDecoder-codec-specific.https.any.worker.html?pcm_ulaw [ Pass Failure ] [ Ventura ] imported/w3c/web-platform-tests/webcodecs/audioDecoder-codec-specific.https.any.worker.html?pcm_u8 [ Pass Failure ] [ Ventura ] imported/w3c/web-platform-tests/webcodecs/audioDecoder-codec-specific.https.any.worker.html?pcm_s16 [ Pass Failure ] [ Ventura ] imported/w3c/web-platform-tests/webcodecs/audioDecoder-codec-specific.https.any.worker.html?pcm_s24 [ Pass Failure ] [ Ventura ] imported/w3c/web-platform-tests/webcodecs/audioDecoder-codec-specific.https.any.worker.html?pcm_s32 [ Pass Failure ] [ Ventura ] imported/w3c/web-platform-tests/webcodecs/audioDecoder-codec-specific.https.any.worker.html?pcm_f32 [ Pass Failure ] for mp3 and Mac, a run in a Ventura VM showed that the AudioToolbox didn't support resampling content. Those PCM tests are attempting to decode a single audio sample, and that seems to trigger an issue with our AudioSampleBufferConverter but only on Ventura This bug aims at tracking on why.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-13 16:58:53 PST
<
rdar://problem/141465725
>
Jean-Yves Avenard [:jya]
Comment 2
2025-01-22 19:33:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39424
EWS
Comment 3
2025-01-25 01:35:15 PST
Committed
289383@main
(48e84cccc7c1): <
https://commits.webkit.org/289383@main
> Reviewed commits have been landed. Closing PR #39424 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug