[Ventura] WebCodecs AudioDecoder tests intermittently fail on Ventura https://bugs.webkit.org/show_bug.cgi?id=284671 rdar://141465725

Reviewed by Philippe Normand.

Underlying issue was fixed by 289260@main.

Fly-By: The test checked that for each AudioDecoder.decode() operation you
got one and exactly one callback call. This isn't a valid assumption as
a single decode could lead to multiple output calls or less.
Only after a call to flush() ensure that all frames have been decoded.

So we modify the WPT test to check that the number of decoded frames is valid
and not check the number of callback calls.

* LayoutTests/TestExpectations:
* LayoutTests/platform/glib/TestExpectations: GStreamer returns half the expected amount of PCM frames, lodged as webkit.org/b/286526
* LayoutTests/imported/w3c/web-platform-tests/webcodecs/audioDecoder-codec-specific.https.any.js: Ensure AudioData object is closed early.
* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/Modules/webcodecs/WebCodecsAudioData.cpp: There is no spec requirements that AudioData must be explicitly closed. Remove console warning.
(WebCore::WebCodecsAudioData::~WebCodecsAudioData): Deleted.
* Source/WebCore/platform/audio/cocoa/AudioDecoderCocoa.cpp:
(WebCore::InternalAudioDecoderCocoa::flush): Drain the internal decoder rather than flush it.
This is inline with what both gecko and blink are doing and is closer to the spec which states:
"Signal [[codec implementation]] to emit all internal pending outputs."

Canonical link: https://commits.webkit.org/289383@main